--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>LoremIpsum</title>
 </head>
 <body>
     <header class="header">
@@ -46,8 +46,8 @@
                     <li>Sed ut perspiciatis, unde omnis iste natus error</li>
                 </ul>
                 <form>
-                    <button class="banner__button button__order btn" onClick="location.href='#order'">заказать</button>
-                    <button class="banner__button button__more btn">подробнее</button>
+                    <button class="banner__button button__order" onClick="location.href='#order'">заказать</button>
+                    <button class="banner__button button__more">подробнее</button>
                 </form>
             </div>
         </div>
